[CLOUDERA_BUILD] Add HTTP endpoint to publish metrics and topic names for CM
CSP-406: Report initial Meter count as 0 for Topic/Partition / Producer metrics.

- To calculate the exact amount of data received for a given time duration, the initial / first Meter count should be reported as 0  to denote broker restart / producer restart / partition reassignment. This helps us to calculate the timeline metrics for topics and producers across it's restarts.

Change-Id: Ic063c9a0f080259fc3c4c580e38e899d1b4b4ea1

CDPD-11589: TopicMetricNameResource checks broker state before accessing zk client

Change-Id: Icdcc095bee1899728f0eaa9ece60d72c3c07bad1

CDH-83493: Kafka Web Server version information revealed (port 24042)

Change-Id: I964936f5d4a3b60dfa3a5e264a35be86a4466958

CDPD-21957: Add TLS and Basic Authentication support for Kafka metrics endpoints

This commit does not contain secrets

Change-Id: I93f78dd7940d6bca776d29ea2aca547fb7908e80

CDPD-30151 Moving metrics reporter to separate module

This commit does not contain secrets

Change-Id: I29b6c22302621213506ecca8c789dd604b4f2917

CDPD-49170: HTTP metrics reporter accepting Kafka's cipher suite config if set

Change-Id: If6528df435b6133705d72ea70aa9f5fa1d985d23

[CLOUDERA-BUILD] Prometheus metrics reporter

This consists of the following changes:

[CDPD-17411] Fix for limitation around Prometheus Counters

Change-Id: Ia3881ba1ea53eec14c98f3d3abd4490cf7bf90f9

[CDPD-18687] Exposing the increase in count instead of the total count for Prometheus.

Note at rebase: this commit contains unit test failures.

Change-Id: I5718993b8befceb09b9e5eaa00c79e0ddb43a53b

[CDPD-18403] Generating Consumer data as Prometheus metrics for SMM to consume and calculate Consumer Metrics.

Change-Id: I238da007af41b48b10f8619d64bbc868e4c308c4

[CDPD-18403] Removing unnecessary Prometheus labels in Consumer Metrics.

Change-Id: I89eb14b66fd0841ac613125e61395601da8953c4

[CDPD-19555] Removing outdated Prometheus Metrics children on each Get requ